--- a/css/frame.css
+++ b/css/frame.css
@@ -36,11 +36,11 @@
 	border-radius:10px;
 	padding: 10px;
 	width: 65%;
-	border: solid 2px #3e6eab;
+	border: solid 2px #ff0;
 	transition: border-width 0.6s linear;
 	color: #3e6eab;
 }
-.container .header .search input:hover{border-width: 5px;}
+/*.container .header .search input:hover{border-width: 5px;}*/
 .container .header .search .bt-search{
 	padding: 10px;
 	border-radius: 5px;
@@ -74,16 +74,22 @@
 /*navigation*/
 .container .header .navigation{
 	grid-column: span 12;
-	border-bottom:3px solid	#3e6eab; 
-	border-top:3px solid #3e6eab; 
+        height:70px;
+	display: inline-block; 
+        border: solid 1px;
+        width:100%;
+        background: #ff0;
 }
 .container .header .navigation .nav{
-	width: 100%;
+    margin-top: 5px;
+	width:100%;
+        height: 20px;
 	text-align: center;
 	position: relative;
+
 }
 .container .header .navigation .nav ul{
-	margin: 5px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	padding: 0px;
 	width: auto;
 	display: inline-block;
@@ -91,8 +97,9 @@
 .container  .header .navigation .nav ul li {
 	font-size: 24px;
 	padding: 5px;
-	border-radius:5px;
-	border: 1px solid #3e6eab;
+	
+	border-left: 1px solid #3e6eab;
+        border-right: 1px solid #3e6eab;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  	text-align: center;
  	display: inline-block;
@@ -124,7 +131,7 @@
 .container .navigation .nav ul li .broad li{
 	display: inline-block;
 	box-sizing: border-box;
-	border-radius: 0px;
+	
 	width: 50%;
 	background-color: white;
 }
@@ -134,6 +141,7 @@
 	border: none;
 	box-shadow: none;
 	background-color: inherit;
+        
 }
 .container  .header .navigation .nav ul #account img{
 	width: 50px;
