--- a/css/login.css
+++ b/css/login.css
@@ -1,17 +1,18 @@
 .bg{
-  background-image: url('../images/bg.jpeg');
+  background-image: url('../images/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
 .containerF{
   position: relative;
-  left: 50%;
-  width: 40%;
-  height: 230px;
-  box-shadow: 4px 4px 5px;
-  margin: 100px 0px;
+  left: 25%;
+  width: 70%;
+  height: 500px;
+
+  margin-top: 50px;
 }
  .containerF-signup{
+    
   display: none;
  }
  /*Content form*/
@@ -19,16 +20,19 @@
   width: 80%;
   height: inherit;
   box-sizing: border-box;
+  border: 1px solid #ff0;
   text-align: center;
   float: left;
-  background-color: rgba(231, 209, 178, 0.5);  
-
+  background-color: lightblue;  
+  margin-bottom: 100px;
 }
 .containerF .containerF-form div{
   margin:5px 0px;
 }
  .containerF .containerF-form .value-in{
+     font-family: 'Roboto Mono', monospace;
   width: 70%;
+  height: inherit;
   margin:5px 0px;
   padding: 15px 0px;
   border:none;
@@ -37,6 +41,17 @@
   border-bottom: 1px solid #f9f9f9;
  }
  .containerF .containerF-login .value-in{
+     padding-left: 5px;
+     border-radius: 10px;
+    background-color: white;
+    border: 1px solid #006666;
+    margin:15px 0px;
+ }
+ .containerF .containerF-signup .value-in{
+     padding-left: 5px;
+     border-radius: 10px;
+    background-color: white;
+    border: 1px solid #006666;
     margin:15px 0px;
  }
 /*Submit*/
@@ -52,25 +67,32 @@ input[type="submit"]{
   }
 /*change form*/
  .containerF .change-form{
-  width: 20%;
-  height: inherit;
-  box-sizing:border-box; 
+  width: 300px;
+  height: 10px;
+  
   word-break: break-all;
   text-align: center;
-  float :right;
+  float :top;
+
 }
 .change-form div{
-  height: 50%;
-  padding: 30% 1px;
+  height: 20%;
+  padding: 10% 1px;
   box-sizing: border-box;
 }
 .change-form .change label,span{
     display:block;
 }
 .change-login{
-  background-color:rgba(231, 209, 178, 0.5);
+    font-family: 'Roboto Mono', monospace;
+    width: 150px;
+  background-color:lightblue;
+  float: left;
 }
 .change-signup{
+    font-family: 'Roboto Mono', monospace;
+    width: 150px;
+    float: right;
     background: white;
 }
 .change:hover{
